# inductor_mlir

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md
binding/: CMakeLists.txt
binding/lib/: 1.cpp  DialectInductor.cpp
binding/mlir/dialects/: InductorOps.td  inductor.py
cmake/: handle_fmt.cmake  handle_python.cmake  handle_pytorch.cmake  handle_triton.cmake
include/inductor/Conversion/: CMakeLists.txt
include/inductor/Conversion/InductorToAffine/: CMakeLists.txt  Passes.h  Passes.td
include/inductor/Conversion/InductorToTriton/: CMakeLists.txt  Passes.h  Passes.td
include/inductor/Dialect/Inductor/IR/: CMakeLists.txt  Inductor.td  InductorAttrs.h  (+7 more)
lib/Conversion/: CMakeLists.txt
lib/Conversion/InductorToAffine/: CMakeLists.txt  InductorToAffine.cpp
lib/Conversion/InductorToTriton/: CMakeLists.txt  InductorToTriton.cpp
lib/Dialect/: CMakeLists.txt
lib/Dialect/Inductor/IR/: CMakeLists.txt  InductorDialect.cpp  InductorInterfaces.cpp  InductorOps.cpp
lib/Dialect/Inductor/Transforms/: CMakeLists.txt  GPUWrapperExtraction.cpp
python/: pyproject.toml  setup.py
python/example/: 1.py
python/inductor_mlir/: dynamo_backend.py  graph.py  importer.py  inductor_graph.py  inductor_inner_fn.py  inductor_inner_fn_affine_analyzer.py  inductor_ir_visiter.py  inductor_ops_handler.py  mlir_importer.py  patch.py  utility.py  utils.py
python/inductor_mlir/monkey_patch/: __init__.py  context_manager.py  fixed_layout.py  graph.py
tools/python/: CMakeLists.txt  inductor_mlir.cpp  ir_builder.cpp  ir_builder.h  passes.cpp
(+3 files in other folders)
